Troubleshooting layout issues & putting together.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -208,7 +208,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -300,6 +300,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -377,10 +378,6 @@ a {
   margin-bottom: 2rem;
 }
 
-.plan--popular {
-  transform: scale(1.1);
-}
-
 .plan--popular .card__header {
   position: relative;
 }
@@ -398,10 +395,6 @@ a {
   transform: scale(1.05);
 }
 
-.plan--popular:hover {
-  transform: scale(1.15);
-}
-
 @media screen and (min-width: 1024px) {
   .plan__name {
     font-size: 1.4rem;
@@ -414,6 +407,14 @@ a {
   }
   .plan__description {
     font-size: 1.7rem;
+  }
+
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
+  .plan--popular:hover {
+    transform: scale(1.15);
   }
 }
 
@@ -747,11 +748,12 @@ a {
 
 .block-domain__prices {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
   justify-items: center;
+  color: var(--color-heading);
 }
 
 @media screen and (min-width: 768px) {
